<resources>
    <string name="app_name">Baspana1</string>
    <string name="phoneNum">Номер телефона</string>
    <string name="sms_alarm">На этот номер придет СМС с кодом</string>
    <string name="SMSdisclaimer">На этот номер придет СМС с кодом</string>
    <string name="sign_in">Войти</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enterSms">Введите код</string>
    <string name="smsSent">На номер телефона было отправлено СМС с кодом.</string>
    <string name="sendAgain">Можно отправить повторно через %s секунд</string>
    <string name="sendAgainRequest">Отправить повторно</string>
    <string name="loadImage">Загрузите фото</string>
    <string name="anotherPhoto">Другое фото</string>
    <string name="nameHint">Имя</string>
    <string name="surnameInput">Фамилия</string>
    <string name="emailInput">Почта</string>
    <string name="userPerms">Регистрируясь вы соглашаетесь пользовательским соглашением</string>
    <string name="continueButton">Продолжить</string>
    <string name="navigation_home">Главная</string>
    <string name="navigation_overview">Обзор</string>
    <string name="navigation_chats">Чаты</string>
    <string name="navigation_profile">Профиль</string>
    <string name="home_action_search">Поиск</string>
    <string name="home_action_consult">Консультирование</string>
    <string name="home_action_buy">Купить</string>
    <string name="home_action_sell">Продать</string>
    <string name="home_action_consulting">Консультация</string>
    <string name="home_adverts">Обьявления</string>
    <string name="searchHint">Поиск</string>
    <string name="appBarLayoutBehavior">com.google.android.material.appbar.AppBarLayout.ScrollingViewBehavior</string>
    <string name="my_adverts">Мои обьявления</string>
    <string name="my_docs">Мои документы</string>
    <string name="settings">Настройки</string>
    <string name="help">Помощь</string>
    <string name="user_agreement">Пользовательское соглашени</string>
    <string name="privateness">Конфиденциальность</string>
    <string name="exit">Выйти</string>
    <string name="network_fail">Нет доступа к сети</string>
    <string name="string_general_info">Общая информация</string>
    <string name="string_construction_year">Год постройки</string>
    <string name="construction_type">Тип недвижимости</string>
    <string name="string_bathroom">Санузел</string>
    <string name="living_area">Жилая площадь</string>
    <string name="kitchen_area">Площадь кухни</string>
    <string name="advert_hegight">Высота потолков</string>
    <string name="house_floor">Этажность здания</string>
    <string name="appn_request">Оставить заявку</string>
    <string name="string_area">Площадь</string>
    <string name="string_rooms">Комнат</string>
    <string name="string_floor">Этаж</string>
    <string name="string_description">Описание</string>
    <string name="no_chats_string">У вас пока нет чатов.</string>
</resources>