<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/navigation_home" />

    <item
        android:id="@+id/navigationOverview"
        android:icon="@drawable/ic_navigation_overview"
        android:title="@string/navigation_overview" />

    <item
        android:id="@+id/navigationFavorites"
        android:title="" />

    <item
        android:id="@+id/navigationChats"
        android:icon="@drawable/ic_navigation_chat"
        android:title="@string/navigation_chats" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_navigation_profile"
        android:title="@string/navigation_profile" />

</menu>